--- a/src/MathStackOverflowQuestion.tex
+++ b/src/MathStackOverflowQuestion.tex
@@ -117,6 +117,6 @@
     \section{Introduction} \label{sec:introduction}
     \input{sections/02_introduction}
 
-    \noindent \textbf{Version:} \input{sections/version}
+%    \noindent \textbf{Version:} \input{sections/version}
 
 \end{document}
