--- a/src/MathStackOverflowQuestion.tex
+++ b/src/MathStackOverflowQuestion.tex
@@ -86,8 +86,8 @@
 
 %\numberwithin{equation}{section}
 
-\title[Math StackOverflow Question]
-{Math StackOverflow Question}
+\title[Coefficients in polynomial identity for odd powers]
+{Coefficients in polynomial identity for odd powers}
 \author[Petro Kolosov]{Petro Kolosov}
 %\address{Software Developer, DevOps Engineer}
 %\email{kolosovp94@gmail.com}
