--- a/src/sections/02_introduction.tex
+++ b/src/sections/02_introduction.tex
@@ -36,7 +36,7 @@ By applying compact sigma sum notation yields an identity for cubes $n^3$
 \end{align*}
 The term $n$ in the sum above can be moved under sigma notation, because there is exactly $n$ iterations, therefore
 \begin{align*}
-    n^3 = \sum_{k=0}^{n-1} 6k(n-k) + 1
+    n^3 = \sum_{k=0}^{n-1} 6k(n-k) + 1 \quad \quad (3)
 \end{align*}
 By inspecting the expression $6k(n-k) + 1$ we iterate under summation,
 we can notice that it is symmetric over $k$, let be $T(n,k) = 6k(n-k) + 1$, then
@@ -45,7 +45,7 @@ we can notice that it is symmetric over $k$, let be $T(n,k) = 6k(n-k) + 1$, then
 \end{align*}
 This symmetry allows us to alter summation bounds again, so that
 \begin{align*}
-    n^3 = \sum_{k=1}^{n} 6k(n-k) + 1
+    n^3 = \sum_{k=1}^{n} 6k(n-k) + 1 \quad \quad (4)
 \end{align*}
 Assume that polynomial identities
 $n^3 = \sum_{k=0}^{n-1} 6k(n-k) + 1$ and $n^3 = \sum_{k=1}^{n} 6k(n-k) + 1$
@@ -59,7 +59,7 @@ It could be generalized even further, for every odd power $2m+1$, giving a set o
 $A_{m,0}, A_{m,1},A_{m,2},A_{m,3}, \ldots, A_{m,m}$ such that
 \begin{align*}
     n^{2m+1} = \sum_{k=1}^{n} A_{m,0} k^0 (n-k)^0 + A_{m,1} (n-k)^1
-    + \cdots + A_{m,m} k^m (n-k)^m
+    + \cdots + A_{m,m} k^m (n-k)^m \quad \quad (5)
 \end{align*}
 Leading to numerous polynomial identities, including its compact form
 \begin{align*}
@@ -73,3 +73,24 @@ For example,
     n^9 &= \sum_{k=1}^{n} 630 k^4(n-k)^4 - 120k(n-k) + 1 \\
     n^{11} &= \sum_{k=1}^{n} 2772 k^5(n-k)^5 + 660 k^2(n-k)^2 - 1386k(n-k) + 1
 \end{align*}
+These coefficients $A_{m,r}$ are registered in OEIS: https://oeis.org/A302971, https://oeis.org/A304042.
+
+Recurrence relation for $A_{m,r}$ is given by: https://mathoverflow.net/q/297900/113033
+
+----
+
+\textbf{Question 1}: The algorithm we used to obtain identities for
+cubes (3), (4) is quite simple, if not naive.
+I believe it should be discussed in mathematical literature, as well as identity
+that gives a set of real coefficients $A_{m,r}$ such that
+\begin{align*}
+    n^{2m+1} = \sum_{k=1}^{n} A_{m,0} k^0 (n-k)^0 + A_{m,1} (n-k)^1
+    + \cdots + A_{m,m} k^m (n-k)^m
+\end{align*}
+However, I was not able to find any references that in particular mention coefficients $A_{m,r}$,
+which is one of open questions.
+
+
+\textbf{Question 2}: Can we consider the process of obtaining the identities (3), (4) as an interpolation technique?
+
+\textbf{Question 3}: If the question 2 is true, can we consider equation (5) as an interpolation technique too?
