add missing factor

--- a/src/sections/02_introduction.tex
+++ b/src/sections/02_introduction.tex
@@ -57,7 +57,7 @@ where $A_{1,1} = 6$ and $A_{1,0} = 1$, respectively.
 It could be generalized even further, for every odd power $2m+1$, giving a set of real coefficients
 $A_{m,0}, A_{m,1},A_{m,2},A_{m,3}, \ldots, A_{m,m}$ such that
 \begin{align*}
-    n^{2m+1} = \sum_{k=1}^{n} A_{m,0} k^0 (n-k)^0 + A_{m,1} (n-k)^1
+    n^{2m+1} = \sum_{k=1}^{n} A_{m,0} k^0 (n-k)^0 + A_{m,1} k^1 (n-k)^1
     + \cdots + A_{m,m} k^m (n-k)^m \quad \quad (5)
 \end{align*}
 Leading to numerous polynomial identities, including its compact form
