--- a/src/sections/02_introduction.tex
+++ b/src/sections/02_introduction.tex
@@ -78,7 +78,7 @@ Recurrence relation for $A_{m,r}$ is given by: https://mathoverflow.net/q/297900
 
 ----
 
-\textbf{Question 1}: The algorithm we used to obtain identities for
+**Question 1**: The algorithm we used to obtain identities for
 cubes (3), (4) is quite simple, if not naive.
 I believe it should be discussed in mathematical literature, as well as identity
 that gives a set of real coefficients $A_{m,r}$ such that
@@ -90,6 +90,6 @@ However, I was not able to find any references that in particular mention coeffi
 which is one of open questions.
 
 
-\textbf{Question 2}: Can we consider the process of obtaining the identities (3), (4) as an interpolation technique?
+**Question 2**: Can we consider the process of obtaining the identities (3), (4) as an interpolation technique?
 
-\textbf{Question 3}: If the question 2 is true, can we consider equation (5) as an interpolation technique too?
+**Question 3**: If the question 2 is true, can we consider equation (5) as an interpolation technique too?
