--- a/src/sections/02_introduction.tex
+++ b/src/sections/02_introduction.tex
@@ -13,7 +13,7 @@ Which leads to identity in terms of finite differences of cubes
 \end{align*}
 It is obvious that $n^3$ evaluates to the sum of its $n-1$ finite differences, so that
 \begin{align*}
-    \Delta n^3 = \sum_{k=0}^{n-1} \Delta k^3 = \sum_{k=0}^{n-1} \left( 1 + 6 \sum_{t=0}^{k} t \right)
+    n^3 = \sum_{k=0}^{n-1} \Delta k^3 = \sum_{k=0}^{n-1} \left( 1 + 6 \sum_{t=0}^{k} t \right)
     \quad \quad (1)
 \end{align*}
 In its explicit form
